Adding images for increased visual response

--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<div id="area">
-		<p id="myLog"></p>
-		<div id="b1"><a href="index.html">Retry</a></div>
-		<script src="main.js" type="text/javascript"></script>
+	<div id="content">
+		<div class="pics" id="pic1"><img src="images/soldier.jpg" style="height: 500px;"></div>
+		<div id="area">
+			<p id="myLog"></p>
+			<div id="b1"><a href="index.html">Retry</a></div>
+			<script src="main.js" type="text/javascript"></script>
+		</div>
+		<div class="pics" id="pic2"><img src="images/dragon.jpeg"></div>
 	</div>
 
 </body>
