Revert soldier image and remove empty css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div id="content">
-		<div class="pics" id="pic1"><img src="images/soldierS.png" style="height: 500px;"></div>
+		<div class="pics" id="pic1"><img src="images/soldier.jpg" style="height: 500px;"></div>
 		<div id="area">
 			<p id="myLog"></p>
 			<div id="b1"><a href="index.html">Retry</a></div>
